syntax = "proto3";
package flydigi;

option go_package = "github.com/pipe01/flydigictl/pkg/dbus/pb";

enum ConnectionType {
    UNKNOWN = 0;
    WIRELESS = 1;
    WIRED = 2;
}

message GamepadInfo {
    int32 device_id = 1;
    int32 battery_percent = 2;
    ConnectionType connection_type = 3;
    string cpu_type = 4;
    string cpu_name = 5;
}

message GamepadConfiguration {
    JoystickConfiguration left_joystick = 1;
    JoystickConfiguration right_joystick = 2;
}

message JoystickConfiguration {
    int32 deadzone = 1;
}

message LedsOff {
}

message LedsSteady {
    Color color = 1;
}

message LedsStreamlined {
    float speed = 1;
}

message LedsConfiguration {
    float brightness = 1;
    oneof leds {
        LedsOff off = 10;
        LedsSteady steady = 12;
        LedsStreamlined streamlined = 13;
    }
}

message Color {
    int32 rgb = 1;
}